--- a/pms.app/Components/Pages/CustomerItemPages/Create.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Create.razor
@@ -12,53 +12,59 @@
 
 <PageTitle>Create</PageTitle>
 
-<h1>Create</h1>
 
-<h4>CustomerItem</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <EditForm method="post" Model="CustomerItem" OnValidSubmit="AddCustomerItem" FormName="create" Enhance>
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" />
+<div class="card">
+    <div class="card-header text-white bg-primary">
+        <h4>Add Item To Customer</h4>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="col-md-6">
+                    <EditForm method="post" Model="CustomerItem" OnValidSubmit="AddCustomerItem" FormName="create" Enhance>
+                        <DataAnnotationsValidator />
+                        <ValidationSummary class="text-danger" />
 
-            <div class="mb-3">
-                <label for="customer" class="form-label">Customer:</label>
-                <InputSelect id="customer" @bind-Value="CustomerItem.CustomerId" class="form-control">
-                    <option value="0"></option>
-                    @foreach (var customer in Customers)
-                    {
-                        <option value="@customer.Id">@customer.Name</option>
-                    }
-                </InputSelect>
-                <ValidationMessage For="@(() => CustomerItem.CustomerId)" class="text-danger" />
+                        <div class="mb-3">
+                            <label for="customer" class="form-label">Customer:</label>
+                            <InputSelect id="customer" @bind-Value="CustomerItem.CustomerId" class="form-control">
+                                <option value="0"></option>
+                                @foreach (var customer in Customers)
+                                {
+                                    <option value="@customer.Id">@customer.Name</option>
+                                }
+                            </InputSelect>
+                            <ValidationMessage For="@(() => CustomerItem.CustomerId)" class="text-danger" />
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="item" class="form-label">Item:</label>
+                            <InputSelect id="item" @bind-Value="CustomerItem.ItemId" class="form-control">
+                                <option value="0"></option>
+                                @foreach (var item in Items)
+                                {
+                                    <option value="@item.Id">@item.Name</option>
+                                }
+                            </InputSelect>
+                            <ValidationMessage For="@(() => CustomerItem.ItemId)" class="text-danger" />
+                        </div>
+
+                        <div class="mb-3">
+                            <label for="quantity" class="form-label">Quantity:</label>
+                            <InputNumber id="quantity" @bind-Value="CustomerItem.Quantity" class="form-control" />
+                            <ValidationMessage For="() => CustomerItem.Quantity" class="text-danger" />
+                        </div>
+                        <div class="mt-3">
+                            <button type="submit" class="btn btn-sm btn-primary">Create</button>
+                            <a href="/customeritems" class="btn btn-sm btn-secondary">Back to List</a>
+                        </div>
+                    </EditForm>
+                </div>
             </div>
-
-            <div class="mb-3">
-                <label for="item" class="form-label">Item:</label>
-                <InputSelect id="item" @bind-Value="CustomerItem.ItemId" class="form-control">
-                    <option value="0"></option>
-                    @foreach (var item in Items)
-                    {
-                        <option value="@item.Id">@item.Name</option>
-                    }
-                </InputSelect>
-                <ValidationMessage For="@(() => CustomerItem.ItemId)" class="text-danger" />
-            </div>
-
-            <div class="mb-3">
-                <label for="quantity" class="form-label">Quantity:</label>
-                <InputNumber id="quantity" @bind-Value="CustomerItem.Quantity" class="form-control" />
-                <ValidationMessage For="() => CustomerItem.Quantity" class="text-danger" />
-            </div>
-            <button type="submit" class="btn btn-primary">Create</button>
-        </EditForm>
+        </div>
     </div>
 </div>
 
-<div>
-    <a href="/customeritems">Back to List</a>
-</div>
 
 @code {
 
