--- a/pms.app/Components/Pages/CustomerItemPages/Delete.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Delete.razor
@@ -11,39 +11,49 @@
 
 <PageTitle>Delete</PageTitle>
 
-<h1>Delete</h1>
+<div class="card">
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Customer Item</h4>
-    <hr />
-    @if (customeritem is null)
-    {
-        <p><em>Loading...</em></p>
-    }
-    else
-    {
-        <dl class="row">
-            <dt class="col-sm-2">Customer Name</dt>
-            <dd class="col-sm-10">@customeritem.Customer.Name</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Item Name</dt>
-            <dd class="col-sm-10">@customeritem.Item.Name</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Quantity</dt>
-            <dd class="col-sm-10">@customeritem.Quantity</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Assigned Date</dt>
-            <dd class="col-sm-10">@customeritem.AssignedDate</dd>
-        </dl>
-        <EditForm method="post" Model="customeritem" OnValidSubmit="DeleteCustomerItem" FormName="delete" Enhance>
-            <button type="submit" class="btn btn-danger" disabled="@(customeritem is null)">Delete</button> |
-            <a href="/customeritems">Back to List</a>
-        </EditForm>
-    }
+    <div class="card-header text-white bg-primary">
+        <h4>Delete Customer Item</h4>
+    </div>
+
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-12">
+                <div>
+                    <h4>Customer Item</h4>
+                    <hr />
+                    @if (customeritem is null)
+                    {
+                        <p><em>Loading...</em></p>
+                    }
+                    else
+                    {
+                        <dl class="row">
+                            <dt class="col-sm-2">Customer Name</dt>
+                            <dd class="col-sm-10">@customeritem.Customer.Name</dd>
+                        </dl>
+                        <dl class="row">
+                            <dt class="col-sm-2">Item Name</dt>
+                            <dd class="col-sm-10">@customeritem.Item.Name</dd>
+                        </dl>
+                        <dl class="row">
+                            <dt class="col-sm-2">Quantity</dt>
+                            <dd class="col-sm-10">@customeritem.Quantity</dd>
+                        </dl>
+                        <dl class="row">
+                            <dt class="col-sm-2">Assigned Date</dt>
+                            <dd class="col-sm-10">@customeritem.AssignedDate</dd>
+                        </dl>
+                        <EditForm method="post" Model="customeritem" OnValidSubmit="DeleteCustomerItem" FormName="delete" Enhance>
+                            <button type="submit" class="btn btn-sm btn-danger" disabled="@(customeritem is null)">Delete</button>
+                            <a href="/customeritems" class="btn btn-sm btn-secondary">Back to List</a>
+                        </EditForm>
+                    }
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 @code {
