--- a/pms.app/Components/Pages/CustomerItemPages/Edit.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Edit.razor
@@ -14,40 +14,49 @@
 
 <PageTitle>Edit</PageTitle>
 
-<h1>Edit</h1>
 
-<h4>Customer Item</h4>
-<hr />
-@if (CustomerItem is null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <div class="row">
-        <div class="col-md-4">
-            <p>Customer: @CustomerItem.Customer.Name</p>
-            <p>Item: @CustomerItem.Item.Name</p>
-            <EditForm method="post" Model="CustomerItem" OnValidSubmit="UpdateCustomerItem" FormName="edit" Enhance>
-                <DataAnnotationsValidator />
-                <input type="hidden" name="CustomerItem.Id" value="@CustomerItem.Id" />
-                <ValidationSummary />
+<div class="card">
 
-                <div class="mb-3">
-                    <label for="quantity" class="form-label">Quantity</label>
-                    <InputNumber id="quantity" @bind-Value="@CustomerItem.Quantity" class="form-control" />
-                    <ValidationMessage For="() => CustomerItem.Quantity" class="text-danger" />
-                </div>
+    <div class="card-header text-white bg-primary">
+        <h4>Edit Customer Item</h4>
+    </div>
 
-                <button type="submit" class="btn btn-primary">Save</button>
-            </EditForm>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-12">
+                @if (CustomerItem is null)
+                {
+                    <p><em>Loading...</em></p>
+                }
+                else
+                {
+                    <div class="row">
+                        <div class="col-md-4">
+                            <p>Customer: @CustomerItem.Customer.Name</p>
+                            <p>Item: @CustomerItem.Item.Name</p>
+                            <EditForm method="post" Model="CustomerItem" OnValidSubmit="UpdateCustomerItem" FormName="edit" Enhance>
+                                <DataAnnotationsValidator />
+                                <input type="hidden" name="CustomerItem.Id" value="@CustomerItem.Id" />
+                                <ValidationSummary />
+
+                                <div class="mb-3">
+                                    <label for="quantity" class="form-label">Quantity</label>
+                                    <InputNumber id="quantity" @bind-Value="@CustomerItem.Quantity" class="form-control" />
+                                    <ValidationMessage For="() => CustomerItem.Quantity" class="text-danger" />
+                                </div>
+
+                                <button type="submit" class="btn btn-primary">Save</button>
+                                <a href="/customeritems" class="btn btn-secondary">Back to List</a>
+                            </EditForm>
+                        </div>
+                    </div>
+                }
+            </div>
         </div>
     </div>
-}
-
-<div>
-    <a href="/customeritems">Back to List</a>
 </div>
+
+
 
 @code {
     [SupplyParameterFromQuery]
