--- a/pms.app/Components/Pages/CategoryPages/Edit.razor
+++ b/pms.app/Components/Pages/CategoryPages/Edit.razor
@@ -51,8 +51,8 @@
                                     <InputDate id="created" @bind-Value="Category.Created" class="form-control" readonly />
                                     <ValidationMessage For="() => Category.Created" class="text-danger" />
                                 </div>
-                                <button type="submit" class="btn btn-primary">Save</button>
-                                <a href="/categories" class="btn btn-secondary">Back to List</a>
+                                <button type="submit" class="btn btn-sm btn-primary">Save</button>
+                                <a href="/categories" class="btn btm-sm btn-secondary">Back to List</a>
                             </EditForm>
                         </div>
                     </div>
