--- a/pms.app/Components/Pages/CategoryPages/Create.razor
+++ b/pms.app/Components/Pages/CategoryPages/Create.razor
@@ -12,7 +12,7 @@
 
 <div class="card">
     <div class="card-header text-white bg-primary">
-        <h4>Create Category</h4>
+        <h4>Create New</h4>
     </div>
     <div class="card-body">
         <div class="row">
@@ -32,8 +32,8 @@
                     </div>
 
                     <div class="mt-3">
-                        <button type="submit" class="btn btn-primary">Create</button>
-                        <a href="/categories" class="btn btn-secondary">Back to List</a>
+                        <button type="submit" class="btn btn-sm btn-primary">Create</button>
+                        <a href="/categories" class="btn btn-sm btn-secondary">Back to List</a>
                     </div>
                 </EditForm>
             </div>
