--- a/pms.app/Components/Pages/CategoryPages/Delete.razor
+++ b/pms.app/Components/Pages/CategoryPages/Delete.razor
@@ -44,8 +44,8 @@
                         <dd class="col-sm-10">@category.Updated</dd>
                     </dl>
                     <EditForm method="post" Model="category" OnValidSubmit="DeleteCategory" FormName="delete" Enhance>
-                        <button type="submit" class="btn btn-danger" disabled="@(category is null)">Delete</button>
-                        <a href="/categories" class="btn btn-secondary">Back to List</a>
+                        <button type="submit" class="btn btn-sm btn-danger" disabled="@(category is null)">Delete</button>
+                        <a href="/categories" class="btn btn-sm btn-secondary">Back to List</a>
                     </EditForm>
                 }
             </div>
