--- a/pms.app/Components/Pages/CustomerItemPages/Edit.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Edit.razor
@@ -45,8 +45,8 @@
                                     <ValidationMessage For="() => CustomerItem.Quantity" class="text-danger" />
                                 </div>
 
-                                <button type="submit" class="btn btn-primary">Save</button>
-                                <a href="/customeritems" class="btn btn-secondary">Back to List</a>
+                                <button type="submit" class="btn btn-sm btn-primary">Save</button>
+                                <a href="/customeritems" class="btn btn-sm btn-secondary">Back to List</a>
                             </EditForm>
                         </div>
                     </div>
