--- a/pms.app/Components/Pages/CustomerPages/Create.razor
+++ b/pms.app/Components/Pages/CustomerPages/Create.razor
@@ -11,64 +11,68 @@
 
 <PageTitle>Create</PageTitle>
 
-<h1>Create</h1>
-
-<h4>Customer</h4>
-<hr />
-
-<div class="row">
-    <div class="col-md-4">
-        <EditForm method="post" Model="Customer" OnValidSubmit="AddCustomer" FormName="create" Enhance>
-            <DataAnnotationsValidator />
-            <ValidationSummary class="text-danger" />
-            <div class="mb-3">
-                <label for="name" class="form-label">Name:</label> 
-                <InputText id="name" @bind-Value="Customer.Name" class="form-control" /> 
-                <ValidationMessage For="() => Customer.Name" class="text-danger" /> 
-            </div>        
-            <div class="mb-3">
-                <label for="email" class="form-label">Email:</label> 
-                <InputText id="email" @bind-Value="Customer.Email" class="form-control" /> 
-                <ValidationMessage For="() => Customer.Email" class="text-danger" /> 
-            </div>        
-            <div class="mb-3">
-                <label for="phone" class="form-label">Phone:</label> 
-                <InputText id="phone" @bind-Value="Customer.Phone" class="form-control" /> 
-                <ValidationMessage For="() => Customer.Phone" class="text-danger" /> 
-            </div>        
-            <div class="mb-3">
-                <label for="address" class="form-label">Address:</label> 
-                <InputText id="address" @bind-Value="Customer.Address" class="form-control" /> 
-                <ValidationMessage For="() => Customer.Address" class="text-danger" /> 
-            </div>        
-            <div class="mb-3">
-                <label for="city" class="form-label">City:</label> 
-                <InputText id="city" @bind-Value="Customer.City" class="form-control" /> 
-                <ValidationMessage For="() => Customer.City" class="text-danger" /> 
-            </div>        
-            <div class="mb-3">
-                <label for="status" class="form-label">Status:</label>
-                <InputSelect id="status" @bind-Value="Customer.Status" class="form-control">
-                    @foreach (var statusOption in Status.GetStatusOptions())
-                    {
-                        <option value="@statusOption">@statusOption</option>
-                    }
-                </InputSelect>
-                <ValidationMessage For="() => Customer.Status" class="text-danger" />
-            </div>
-            <button type="submit" class="btn btn-primary">Create</button>
-        </EditForm>
+<div class="card">
+    <div class="card-header text-white bg-primary">
+        <h4>Add Customer</h4>
     </div>
-</div> 
-
-<div>
-    <a href="/customers">Back to List</a>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="col-md-6">
+                    <EditForm method="post" Model="Customer" OnValidSubmit="AddCustomer" FormName="create" Enhance>
+                        <DataAnnotationsValidator />
+                        <ValidationSummary class="text-danger" />
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Name:</label>
+                            <InputText id="name" @bind-Value="Customer.Name" class="form-control" />
+                            <ValidationMessage For="() => Customer.Name" class="text-danger" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email:</label>
+                            <InputText id="email" @bind-Value="Customer.Email" class="form-control" />
+                            <ValidationMessage For="() => Customer.Email" class="text-danger" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Phone:</label>
+                            <InputText id="phone" @bind-Value="Customer.Phone" class="form-control" />
+                            <ValidationMessage For="() => Customer.Phone" class="text-danger" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="address" class="form-label">Address:</label>
+                            <InputText id="address" @bind-Value="Customer.Address" class="form-control" />
+                            <ValidationMessage For="() => Customer.Address" class="text-danger" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="city" class="form-label">City:</label>
+                            <InputText id="city" @bind-Value="Customer.City" class="form-control" />
+                            <ValidationMessage For="() => Customer.City" class="text-danger" />
+                        </div>
+                        <div class="mb-3">
+                            <label for="status" class="form-label">Status:</label>
+                            <InputSelect id="status" @bind-Value="Customer.Status" class="form-control">
+                                @foreach (var statusOption in Status.GetStatusOptions())
+                                {
+                                    <option value="@statusOption">@statusOption</option>
+                                }
+                            </InputSelect>
+                            <ValidationMessage For="() => Customer.Status" class="text-danger" />
+                        </div>
+                        <div class="mt-3">
+                            <button type="submit" class="btn btn-sm btn-primary">Create</button>
+                            <a href="/customers" class="btn btn-sm btn-secondary">Back to List</a>
+                        </div>
+                    </EditForm>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
 
 @code {
 
-  [SupplyParameterFromForm]
-   public Customer Customer { get; set; } = new();
+    [SupplyParameterFromForm]
+    public Customer Customer { get; set; } = new();
 
     // To protect from overposting attacks, see https://aka.ms/RazorPagesCRUD
     public async Task AddCustomer()
