--- a/pms.app/Components/Pages/CustomerPages/Delete.razor
+++ b/pms.app/Components/Pages/CustomerPages/Delete.razor
@@ -11,55 +11,64 @@
 
 <PageTitle>Delete</PageTitle>
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Customer</h4>
-    <hr />
-    @if (customer is null)
-    {
-        <p><em>Loading...</em></p>
-    }
-    else {
-        <dl class="row">
-            <dt class="col-sm-2">Name</dt>
-            <dd class="col-sm-10">@customer.Name</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Email</dt>
-            <dd class="col-sm-10">@customer.Email</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Phone</dt>
-            <dd class="col-sm-10">@customer.Phone</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Address</dt>
-            <dd class="col-sm-10">@customer.Address</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">City</dt>
-            <dd class="col-sm-10">@customer.City</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Status</dt>
-            <dd class="col-sm-10">@customer.Status</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Created</dt>
-            <dd class="col-sm-10">@customer.Created</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Updated</dt>
-            <dd class="col-sm-10">@customer.Updated</dd>
-        </dl>
-        <EditForm method="post" Model="customer" OnValidSubmit="DeleteCustomer" FormName="delete" Enhance>
-            <button type="submit" class="btn btn-danger" disabled="@(customer is null)">Delete</button> |
-            <a href="/customers">Back to List</a>
-        </EditForm>
-    }
+<div class="card">
+
+    <div class="card-header text-white bg-primary">
+        <h4>Delete Customer</h4>
+    </div>
+
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-12">
+                @if (customer is null)
+                {
+                    <p><em>Loading...</em></p>
+                }
+                else
+                {
+                    <dl class="row">
+                        <dt class="col-sm-2">Name</dt>
+                        <dd class="col-sm-10">@customer.Name</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Email</dt>
+                        <dd class="col-sm-10">@customer.Email</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Phone</dt>
+                        <dd class="col-sm-10">@customer.Phone</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Address</dt>
+                        <dd class="col-sm-10">@customer.Address</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">City</dt>
+                        <dd class="col-sm-10">@customer.City</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Status</dt>
+                        <dd class="col-sm-10">@customer.Status</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Created</dt>
+                        <dd class="col-sm-10">@customer.Created</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Updated</dt>
+                        <dd class="col-sm-10">@customer.Updated</dd>
+                    </dl>
+                    <EditForm method="post" Model="customer" OnValidSubmit="DeleteCustomer" FormName="delete" Enhance>
+                        <button type="submit" class="btn btn-sm btn-danger" disabled="@(customer is null)">Delete</button>
+                        <a href="/customers" class="btn btn-sm btn-secondary">Back to List</a>
+                    </EditForm>
+                }
+            </div>
+        </div>
+    </div>
 </div>
+
 
 @code {
     Customer? customer;
